--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,9 +1,14 @@
 version: 0.2
 
+env:
+  variables:
+    JAVA_HOME: "/opt/java17"
+    PATH: "${JAVA_HOME}/bin:${PATH}"
+
 phases:
   install:
     runtime-versions:
-      java: corretto17
+      java: corretto-17
   build:
     commands:
       - mvn clean install
